fixed particle.js on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,26 +124,38 @@ a:hover {
     .navbar-brand img {
         border: 8px solid var(--color-brand) !important;
     }
-    
     #particles-js {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: -1;
-        background-size: cover;
     }
-    
-    
 
     /* CONTENT WRAPPER */
     #content-wrapper {
         position:relative;
         padding-left: var(--sidbar-width) !important;
         z-index: 1;
+        overflow-y: auto;
+        /*-webkit-background-size: cover;
+        background-size:cover;
+        background-position: center center;
+        height: 100vh;
+        width: 100%;*/
+
     }
     
+}
+
+@media (max-width: 991px) {
+    #particles-js {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 
